# Cadmium-CellDEVS-SampleModels

./: .gitignore  CMakeLists.txt  README.md
1_1_spatial_sir/: main.cpp
1_1_spatial_sir/model/: state.hpp
1_2_spatial_sir_config/: config.json  main.cpp
1_2_spatial_sir_config/model/: sir_coupled.hpp  state.hpp  vicinity.hpp
1_2_spatial_sir_config/model/cells/: sir_cell.hpp
1_3_spatial_sird/: config.json  main.cpp
1_3_spatial_sird/model/: sird_coupled.hpp  state.hpp  vicinity.hpp
1_3_spatial_sird/model/cells/: sird_cell.hpp
1_4_spatial_sirds/: config.json  main.cpp
1_4_spatial_sirds/model/: sirds_coupled.hpp  state.hpp  vicinity.hpp
1_4_spatial_sirds/model/cells/: sirds_cell.hpp
1_sir/: config.json  main.cpp
1_sir/model/: sir_coupled.hpp  state.hpp  vicinity.hpp
1_sir/model/cells/: sir_cell.hpp
2_1_agent_sir/: config.json  main.cpp
2_1_agent_sir/model/: sir_coupled.hpp  state.hpp  vicinity.hpp
2_1_agent_sir/model/cells/: sir_cell.hpp
2_2_agent_sir_config/model/: state.hpp  vicinity.hpp
2_2_agent_sir_config/model/cells/: sir_cell.hpp
2_3_agent_sird/: main.cpp
2_3_agent_sird/model/: sir_coupled.hpp  sird_coupled.hpp
2_3_agent_sird/model/cells/: sird_cell.hpp
2_4_agent_sirds/: config.json  main.cpp
2_4_agent_sirds/model/: sird_coupled.hpp  state.hpp  vicinity.hpp
2_4_agent_sirds/model/cells/: sirds_cell.hpp
CO2/: README.md  config_vsim.json  style.json
CO2/model/: co2_coupled.hpp  co2_lab_cell.hpp  co2_main.cpp
